chore: fixed response handling and other errors related to warnings